kcm: fix refresh rate list not being updated

BUG: 453392